// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`clean handles empty del 1`] = `
Array [
  Array [
    Array [],
    Object {
      "cwd": "<PROJECT_ROOT>/dist",
      "dot": true,
    },
  ],
]
`;

exports[`clean handles empty del 2`] = `
Array [
  Array [
    "<PROJECT_ROOT>/dist/nested",
  ],
  Array [
    "<PROJECT_ROOT>/dist/another_nested/folder",
  ],
]
`;

exports[`clean handles empty del 3`] = `
Object {
  "del": Array [],
  "makeDirs": Array [
    "<PROJECT_ROOT>/dist/nested",
    "<PROJECT_ROOT>/dist/another_nested/folder",
  ],
}
`;

exports[`clean handles empty makeDirs 1`] = `
Array [
  Array [
    Array [
      "**/*",
    ],
    Object {
      "cwd": "<PROJECT_ROOT>/dist",
      "dot": true,
    },
  ],
]
`;

exports[`clean handles empty makeDirs 2`] = `
Object {
  "del": Array [
    "<PROJECT_ROOT>/dist/nested",
    "<PROJECT_ROOT>/dist/nested/nested.js",
    "<PROJECT_ROOT>/dist/one.js",
    "<PROJECT_ROOT>/dist/two.js",
  ],
  "makeDirs": Array [],
}
`;

exports[`clean handles multiple clean 1`] = `
Array [
  Array [
    Array [
      "**/*",
      "!.git",
      "!two.js",
    ],
    Object {
      "cwd": "<PROJECT_ROOT>/dist",
      "dot": true,
    },
  ],
]
`;

exports[`clean handles multiple clean 2`] = `
Array [
  Array [
    "<PROJECT_ROOT>/dist/nested",
  ],
  Array [
    "<PROJECT_ROOT>/dist/another_nested/folder",
  ],
  Array [
    "<PROJECT_ROOT>/dist/another_two_nested/folder",
  ],
]
`;

exports[`clean handles multiple clean 3`] = `
Object {
  "del": Array [
    "<PROJECT_ROOT>/dist/nested",
    "<PROJECT_ROOT>/dist/nested/nested.js",
    "<PROJECT_ROOT>/dist/one.js",
  ],
  "makeDirs": Array [
    "<PROJECT_ROOT>/dist/nested",
    "<PROJECT_ROOT>/dist/another_nested/folder",
    "<PROJECT_ROOT>/dist/another_two_nested/folder",
  ],
}
`;

exports[`clean handles one clean 1`] = `
Array [
  Array [
    Array [
      "**/*",
    ],
    Object {
      "cwd": "<PROJECT_ROOT>/dist",
      "dot": true,
    },
  ],
]
`;

exports[`clean handles one clean 2`] = `
Array [
  Array [
    "<PROJECT_ROOT>/dist/nested",
  ],
  Array [
    "<PROJECT_ROOT>/dist/another_nested/folder",
  ],
]
`;

exports[`clean handles one clean 3`] = `
Object {
  "del": Array [
    "<PROJECT_ROOT>/dist/nested",
    "<PROJECT_ROOT>/dist/nested/nested.js",
    "<PROJECT_ROOT>/dist/one.js",
    "<PROJECT_ROOT>/dist/two.js",
  ],
  "makeDirs": Array [
    "<PROJECT_ROOT>/dist/nested",
    "<PROJECT_ROOT>/dist/another_nested/folder",
  ],
}
`;

exports[`clean handles undefined 1`] = `
Array [
  Array [
    Array [],
    Object {
      "cwd": "<PROJECT_ROOT>/dist",
      "dot": true,
    },
  ],
]
`;

exports[`clean merges duplicates in correct order 1`] = `
Array [
  Array [
    Array [
      "duplicate/file",
      "unique/file",
    ],
    Object {
      "cwd": "<PROJECT_ROOT>/dist",
      "dot": true,
    },
  ],
]
`;

exports[`clean merges duplicates in correct order 2`] = `
Array [
  Array [
    "<PROJECT_ROOT>/dist/duplicate/dir",
  ],
  Array [
    "<PROJECT_ROOT>/dist/unique/dir",
  ],
]
`;

exports[`clean merges duplicates in correct order 3`] = `
Object {
  "del": Array [],
  "makeDirs": Array [
    "<PROJECT_ROOT>/dist/duplicate/dir",
    "<PROJECT_ROOT>/dist/unique/dir",
  ],
}
`;
